--- a/package.json
+++ b/package.json
@@ -12,11 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-<<<<<<< HEAD
-    "sequelize": "^6.9.0"
-=======
+    "sequelize": "^6.9.0",
     "express-handlebars": "^6.0.1",
     "mysql2": "^2.3.3"
->>>>>>> main
   }
 }
